--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,13 @@
 		"fstream": "cpp",
 		"iomanip": "cpp",
 		"regex": "cpp",
-		"stack": "cpp"
+		"stack": "cpp",
+		"*.tcc": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"random": "cpp",
+		"utility": "cpp"
 	}
 }
