reinstated the flah useport

--- a/Configuration/irc.config
+++ b/Configuration/irc.config
@@ -2,8 +2,8 @@ server_name:42irc
 
 default_port:6667
 default_pass:abc123
-max_ping:15
+max_ping:30
 max_users:1024
-timeout:1000
+timeout:1000000000
 
 default_channels:#general,#42lisboa
